Disponibilizando o editar usuário

--- a/Views/Home/Editar.cshtml
+++ b/Views/Home/Editar.cshtml
@@ -1,10 +1,10 @@
 @model UsuarioModel;
 
 @{
-    ViewData["Title"] = "Criar usuário";
+    ViewData["Title"] = "Editar usuario";
 }
 
-<h1>Criar usuário</h1>
+<h1>Editar usuário</h1>
 
 <form asp-action="Criar" class="form-group col-md-3">
     <div class="form-group">
