--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,34 @@
-﻿@{
+﻿@model List<UsuarioModel>
+
+@{
     ViewData["Title"] = "Formulário";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Usuários</h1>
+    <p>Estes são os usuários que encontramos:</p>
 </div>
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">@Html.DisplayName("Nome")</th>
+            <th scope="col">@Html.DisplayName("Sobrenome")</th>
+            <th scope="col">@Html.DisplayName("Telefone")</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th scope="row">@item.Nome</th>
+                <td>@item.Sobrenome</td>
+                <td>@item.Telefone</td>
+                <td>
+                    <a class="btn btn-outline" asp-route-id="@item.Id" asp-action="Editar"><i class="bi bi-pencil-square"></i> Editar |</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
