--- a/Views/Home/Editar.cshtml
+++ b/Views/Home/Editar.cshtml
@@ -25,5 +25,6 @@
     <br>
     <div class="col-md-8">
         <button type="submit" value="Criar" class="btn btn-primary"><i class="bi bi-pen"></i> Enviar</button>
+        <a class="btn btn-secondary" asp-action="Index">Voltar</a>
     </div>
 </form>
