--- a/Views/Home/Editar.cshtml
+++ b/Views/Home/Editar.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Editar usuário</h1>
 
-<form asp-action="Criar" class="form-group col-md-3">
+<form asp-action="Editar" class="form-group col-md-3">
     <div class="form-group">
         <label asp-for="Nome"></label>
         <input asp-for="Nome" class="form-control" placeholder="Digite o nome do usuário">
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div class="col-md-8">
-        <button type="submit" value="Criar" class="btn btn-primary"><i class="bi bi-pen"></i> Enviar</button>
+        <button type="submit" value="Editar" class="btn btn-primary"><i class="bi bi-pen"></i> Enviar</button>
         <a class="btn btn-secondary" asp-action="Index">Voltar</a>
     </div>
 </form>
