--- a/Views/Home/Deletar.cshtml
+++ b/Views/Home/Deletar.cshtml
@@ -13,7 +13,7 @@
 <div>
     <form asp-action="Deletar">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" />
+        <input type="submit" value="Sim, quero deletar @Model.Nome @Model.Sobrenome" class="btn btn-danger" />
         <a class="btn btn-secondary" asp-action="Index">Voltar</a>
     </form>
 </div>
